--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -1,8 +1,11 @@
 doctype html
 html(lang="en")
-    head 
-        title #{pageTitle} | Wetube
-    body 
-        block content
-    include partials/footer.pug
-
+  head
+    title #{ pageTitle } | Wetube
+    link(rel="stylesheet", href="https://unpkg.com/mvp.css")
+  body
+    header
+      h1= pageTitle
+    main
+      block content
+  include partials/footer.pug
