--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -1,4 +1,5 @@
 extends base.pug
 
-block content 
-    h1 This is watch!
+block content
+  h3 #{ video.views } #{ video.views > 1 ? "views": "view" }
+  a(href=`${video.id}/edit`) Edit Video &rarr;
