--- a/src/views/search.pug
+++ b/src/views/search.pug
@@ -1,14 +1,14 @@
-extends base.pug
+extends base
 include mixins/video.pug
 
 block content
-  h2 Welcome!
   form(action="/search", method="GET")
     input(placeholder="Search by title", name="keyword", type="text")
     input(type="submit", value="Search")
   each vid in videos 
     +video(vid)
   else
-    li Nothing found.
+    span Nothing found.
+    br
 
-  a(href="videos/upload") Upload video
+  a(href="/") Back to home🏠
