--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -9,4 +9,6 @@ block content
     br
     a(href=`${video.id}/edit`) Edit Video ⚒️
     br
+    a(href=`${video.id}/Delete`) Delete Video ⚒️
+    br
     a(href="/") Back to home 🏠
