--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -1,11 +1,26 @@
 doctype html
 html(lang="en")
   head
-    title #{ pageTitle } | Wetube
+    title #{ pageTitle } | #{ siteName }
     link(rel="stylesheet", href="https://unpkg.com/mvp.css")
   body
     header
       h1= pageTitle
+      nav
+        ul
+          li
+            a(href="/") Home
+          li
+            a(href="/videos/upload") Upload Video
+          if loggedIn
+            li
+              a(href="/logout") Logout
+          else
+            li
+              a(href="/join") Join
+            li
+              a(href="/login") Login
+
     main
       block content
   include partials/footer.pug
