--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -14,7 +14,7 @@ html(lang="en")
             a(href="/videos/upload") Upload Video
           if loggedIn
             li
-              a(href="/logout") Logout
+              a(href="/users/logout") Logout
           else
             li
               a(href="/join") Join
