--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -9,6 +9,8 @@ block content
     small Password
     input(name="password", type="password", required) 
     input(type="submit", value="Login")
+    br
+    a(href="/users/github/start") Continue with Github🔮
   hr
   div
     span Don't have an account?
