--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -4,7 +4,9 @@ block content
   h4 Uploade a new video
   if errorMessage
     span= errorMessage
-  form(action="", method="POST")
+  form(action="", method="POST", enctype="multipart/form-data")
+    label(for="video") Video file
+    input#video(type="file", accept="video/*", name="video", required)
     input(name="title", placeholder=`${pageTitle}`, required, type="text")
     input(name="description", placeholder="Description", required, type="text")
     input(name="hashtags", placeholder="Hashtags", required, type="text")
