--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -10,9 +10,13 @@ html(lang="en")
         ul
           li
             a(href="/") Home
-          li
-            a(href="/videos/upload") Upload Video
           if loggedIn
+            li
+              a(href="/videos/upload") Upload Video
+            li
+              a(href=`/users/${loggedInUser._id}`) My Profile
+            li
+              a(href="/users/edit") Edit Profile
             li
               a(href="/users/logout") Logout
           else
