--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -3,6 +3,7 @@ html(lang="en")
   head
     title #{ pageTitle } | #{ siteName }
     link(rel="stylesheet", href="https://unpkg.com/mvp.css")
+    link(rel="stylesheet", href="/assets/css/styles.css")
   body
     header
       h1= pageTitle
@@ -28,3 +29,5 @@ html(lang="en")
     main
       block content
   include partials/footer.pug
+
+  script(src="/assets/js/main.js")
