--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -1,5 +1,43 @@
-@import "./_variables";
+// config
+@import "./config/_variables.scss";
+@import "./config/_reset.scss";
 
+// components
+@import "./components/header.scss";
+@import "./components/footer.scss";
+@import "./components/video.scss";
+@import "./components/shared.scss";
+@import "./components/form.scss";
+
+// Screens
+@import "./screens/home.scss";
+@import "./screens/search.scss";
+
+// Defaults
+a {
+  color: inherit;
+  text-decoration: none;
+}
 body {
-  background-color: $red;
+  font-family:
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    "Open Sans",
+    "Helvetica Neue",
+    sans-serif;
+  background-color: $bg;
+  color: white;
+}
+
+main {
+  max-width: 1200px;
+  width: 100%;
+  margin-top: 50px;
+  margin: 0 auto;
 }
