--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -2,32 +2,13 @@ doctype html
 html(lang="en")
   head
     title #{ pageTitle } | #{ siteName }
-    link(rel="stylesheet", href="https://unpkg.com/mvp.css")
+    link(
+      rel="stylesheet",
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    )
     link(rel="stylesheet", href="/assets/css/styles.css")
   body
-    header
-      h1= pageTitle
-      nav
-        ul
-          li
-            a(href="/") Home
-          if loggedIn
-            li
-              a(href="/videos/upload") Upload Video
-            li
-              a(href=`/users/${loggedInUser._id}`) My Profile
-            li
-              a(href="/users/edit") Edit Profile
-            li
-              a(href="/users/logout") Logout
-          else
-            li
-              a(href="/join") Join
-            li
-              a(href="/login") Login
-
+    include partials/header.pug
     main
       block content
   include partials/footer.pug
-
-  script(src="/assets/js/main.js")
