--- a/src/views/mixins/video.pug
+++ b/src/views/mixins/video.pug
@@ -1,7 +1,8 @@
 mixin video(video)
-  div
-    h4
-      a(href=`/videos/${video.id}`)= video.title
-    p= video.description
-    small= video.createdAt
-    hr
+  a.video-mixin(href=`/videos/${video.id}`)
+    .video-mixin__thumb
+    .video-mixin__data
+      span.video-mixin__title= video.title
+      .video-mixin__meta
+        span #{ video.owner.username }⠀·⠀
+        span #{ video.meta.views } view
