--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -1,10 +1,12 @@
 header
   a.header__logo(href="/")
     i.fab.fa-youtube
+  form.search__form(action="/search", method="GET")
+    input(placeholder="Search by title", name="keyword", type="text")
+    button(type="submit") 
+      i.fas.fa-search
   nav
     ul
-      a(href="/search") 
-        i.fas.fa-search
       if loggedIn
         li
           a(href="/videos/upload") Upload Video
