--- a/src/client/scss/screens/search.scss
+++ b/src/client/scss/screens/search.scss
@@ -1,28 +1,4 @@
-.search__form {
-  max-width: 400px;
-  margin: 0 auto;
-  margin-bottom: 10px;
-  display: flex;
-  align-items: center;
-  position: relative;
-  input {
-    all: unset;
-    padding: 10px 20px;
-    border-radius: 5px;
-    border: 1px solid rgba(255, 255, 255, 0.2);
-    background-color: black;
-    font-size: 16px;
-    color: white;
-    width: 90%;
-  }
-  button {
-    all: unset;
-  }
-  button {
-    position: absolute;
-    right: 15px;
-    background-color: rgba(0, 0, 0, 0);
-    text-align: center;
-    cursor: pointer;
-  }
+.search {
+  display: grid;
+  flex-direction: column;
 }
