--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -8,10 +8,11 @@
 @import "./components/video.scss";
 @import "./components/shared.scss";
 @import "./components/form.scss";
+@import "./components/search-form.scss";
+@import "./components/search-results.scss";
 
 // Screens
 @import "./screens/home.scss";
-@import "./screens/search.scss";
 
 // Defaults
 a {
