--- a/src/views/users/edit-profile.pug
+++ b/src/views/users/edit-profile.pug
@@ -1,15 +1,16 @@
 extends ../base
 
 block content
-  form(method="POST", enctype="multipart/form-data")
-    label(for="avatar") Avatar
+  form.edit-profile__form(method="POST", enctype="multipart/form-data")
     if (loggedInUser.avatarUrl)
-      img(
+      img.avatar(
         src=`${loggedInUser.avatarUrl}`,
         width="100",
         height="100",
         alt="alt"
       )
+      br
+    label(for="avatar") Avatar
     input#avatar(type="file", name="avatar", accept="image/*")
     label(for="name") Name
     input(name="name", type="text", required, value=`${loggedInUser.name}`) 
@@ -21,6 +22,6 @@ block content
       value=`${loggedInUser.location}`
     ) 
     input(type="submit", value="Update Profile")
-    hr
     if (!loggedInUser.socialOnly)
-      a(href="change-password") Change Password
+      .edit-profile__password
+        a(href="change-password") Change Password⠀➡
