--- a/src/client/scss/components/form.scss
+++ b/src/client/scss/components/form.scss
@@ -1,4 +1,15 @@
-input:not(input[type="range"]) {
+.join__form,
+.login__form,
+.edit-profile__form {
+  width: 400px;
+  margin: 0 auto;
+  border: 2px solid rgba(255, 255, 255, 0.2);
+  border-radius: 10px;
+  padding: 20px;
+  background-color: rgba($color: black, $alpha: 0.5);
+}
+
+input:not([type="range"]) {
   all: unset;
   padding: 10px 20px;
   border-radius: 5px;
@@ -7,4 +18,19 @@ input:not(input[type="range"]) {
   font-size: 16px;
   color: white;
   width: 90%;
+  margin-bottom: 5px;
+  &::placeholder {
+    color: rgba(255, 255, 255, 0.5);
+  }
+}
+
+input[type="submit"],
+.socail__btn {
+  padding: 10px 20px;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  background-color: red;
+  text-align: center;
+  border-radius: 5px;
+  display: block;
+  cursor: pointer;
 }
