--- a/src/client/scss/components/search-form.scss
+++ b/src/client/scss/components/search-form.scss
@@ -4,10 +4,10 @@
   display: flex;
   align-items: center;
   position: relative;
-  input {
+  input#search__input {
     all: unset;
     padding: 10px 20px;
-    border-radius: 20px;
+    border-radius: 30px;
     border: 1px solid rgba(255, 255, 255, 0.2);
     background-color: black;
     font-size: 16px;
