--- a/src/client/scss/components/shared.scss
+++ b/src/client/scss/components/shared.scss
@@ -3,3 +3,11 @@
   font-size: 18px;
   margin-bottom: 50px;
 }
+
+.auth-switch {
+  text-align: center;
+  margin-top: 40px;
+  a {
+    text-decoration: underline;
+  }
+}
