--- a/src/views/join.pug
+++ b/src/views/join.pug
@@ -3,22 +3,20 @@ extends base
 block content
   if errorMessage
     span= errorMessage
-  form(method="POST")
-    small Name
-    input(name="name", type="text", required) 
-    small Email
-    input(name="email", type="email", required) 
-    small Username
-    input(name="username", type="text", required) 
-    small Password
-    input(name="password", type="password", required) 
-    small Confirm password
-    input(name="password2", type="password", required) 
-    small Location
-    input(name="location", type="text", required) 
+  form.join__form(method="POST")
+    input(name="name", placeholder="Name", type="text", required) 
+    input(name="email", placeholder="Email", type="email", required) 
+    input(name="username", placeholder="Username", type="text", required) 
+    input(name="password", placeholder="Password", type="password", required) 
+    input(
+      name="password2",
+      placeholder="Confirm password",
+      type="password",
+      required
+    ) 
+    input(name="location", placeholder="Location", type="text", required) 
     input(type="submit", value="Join")
-  hr
-  div
-    span Already have an account?
-    br
+    include partials/social-login
+  .auth-switch
+    span Already have an account?⠀
     a(href="/login") Log in now➡
