--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -3,16 +3,11 @@ extends base
 block content
   if errorMessage
     span= errorMessage
-  form(method="POST")
-    small Username
-    input(name="username", type="text", required) 
-    small Password
-    input(name="password", type="password", required) 
+  form.login__form(method="POST")
+    input(name="username", placeholder="Username", type="text", required) 
+    input(name="password", placeholder="Password", type="password", required) 
     input(type="submit", value="Login")
-    br
-    a(href="/users/github/start") Continue with Github🔮
-  hr
-  div
-    span Don't have an account?
-    br
+    include partials/social-login
+  .auth-switch
+    span Don't have an account?⠀
     a(href="/join") Create one now➡
